--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -4,15 +4,92 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #ff00f2;
+    --secondary-color:#0040ff;
+}
+body {
+    background-image: url(../img/landingp.png);
+    background-size: cover;
+    background-position: relative;
+    background-repeat: no-repeat;
+    height: 100vh;
+   
+}
+
 .logo {
     position: absolute;
     width: 350px;
-    z-index: 10;
     margin-left: 35rem;
+    
 }
 
-.landingp {
-    width: 100%;
-    height: auto;
+
+/*Navbarrens redigering*/
+header .navbar ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+}
+
+header .navbar ul li {
     position: relative;
+    float: left;
+}
+
+header .navbar ul li a {
+    text-decoration: none;
+    padding: 40px;
+    display: block;
+    color: var(--primary-color);
+    font-weight: 40;
+    font-size: 30px;
+ 
+}
+
+header .navbar ul li a:visited {
+   color: var(--primary-color);
+   text-decoration: none;
+   
+}
+
+header .navbar ul li a:hover {
+    background: var(--primary-color);
+    color: var(--secondary-color);
+}
+
+header .navbar ul li ul {
+    position: absolute;
+    left: 0;
+    width: 200px;
+    background: #FFF;
+    display: none;
+}
+
+header .navbar ul li ul li {
+    width: 100%;
+    border-top: 1px solid rgba(0,0,0,0.1);
+}
+
+header .navbar ul li ul li ul {
+    left: 200px;
+    top: 0;
+}
+
+header .navbar ul li:focus-within > ul ,
+header .nvabar ul li:hover > ul {
+    display: block;
+}
+
+#menu-bar {
+    display: none;
+}
+
+header label {
+    font-size: 20px;
+    color: #333;
+    cursor: pointer;
+    display: none;
 }
