--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -30,16 +30,14 @@ header .navbar ul {
     list-style-type: none;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-   margin-left: 5rem;
-   margin-right: 5rem;
+    justify-content: space-around;
     
 }
 
 
 header .navbar ul li {
     position: relative;
-  
+
 }
 
 
@@ -50,13 +48,10 @@ header .navbar ul li a {
     display: block;
     color: var(--primary-color);
     font-size: 30px;
-    font-family:sans-serif;
+    font-family: sans-serif;
     font-weight: 1000;
  
 }
-
-
-
 
 header .navbar ul li a:hover {
     background: var(--primary-color);
@@ -66,12 +61,10 @@ header .navbar ul li a:hover {
 }
 
 
-
 header .navbar ul li ul {
     position: absolute;
     top: 100%;
     left: 0;
-    width: 250px;
     background: var(--secondary-color);
     display: none;
     z-index: 100;
@@ -89,6 +82,7 @@ header .navbar ul li ul li a{
 header .navbar ul li ul li a:hover {
     background: var(--primary-color);
     color: var(--secondary-color);
+  
 }
 
 
