--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +7,7 @@
 }
 
 :root {
-    --primary-color: #ff00f2;
+    --primary-color: #ff00d9;
     --secondary-color:#0040ff;
 }
 body {
@@ -14,7 +16,7 @@ body {
     background-position: relative;
     background-repeat: no-repeat;
     height: 100vh;
-   
+    font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .logo {
@@ -24,6 +26,24 @@ body {
     
 }
 
+h1 {
+    text-align: center;
+    margin-top: 1300px;
+    color: var(--primary-color);
+    font-size: 5rem;
+}
+
+p {
+    color: var(--primary-color);
+    text-align: center;
+    margin: 50px 100px;
+}
+
+h2 {
+    text-align: center;
+    color: var(--primary-color);
+    font-size: 3rem;
+}
 
 /*Navbarrens redigering*/
 header .navbar ul {
@@ -48,7 +68,6 @@ header .navbar ul li a {
     display: block;
     color: var(--primary-color);
     font-size: 30px;
-    font-family: sans-serif;
     font-weight: 1000;
  
 }
