--- a/style.css/program.css
+++ b/style.css/program.css
@@ -33,11 +33,14 @@ body {
 
 h1 {
     text-align: center;
-    margin-top: 300px;
+    margin-top: 350px;
     color: var(--primary-color);
-    font-size: 5rem;
+    font-size: 3rem;
 }
 
+p {
+    margin: 50px 150px;
+}
 
 h2 {
     text-align: center;
