events og billeder laves med css grid så jeg kan lave kolonner og rækker

--- a/style.css/program.css
+++ b/style.css/program.css
@@ -48,6 +48,21 @@ h2 {
     font-size: 3rem;
 }
 
+.event {
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   grid-template-rows: repeat(2, auto);
+   gap: 20px;
+   width: 70%;
+   margin: 0 auto;
+}
+
+.event img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
 /*Navbarrens redigering*/
 header .navbar ul {
     list-style-type: none;
@@ -131,6 +146,7 @@ header label {
 }
 
 .footer {
+    margin-top: 4rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
