--- a/style.css/ungskab.css
+++ b/style.css/ungskab.css
@@ -14,7 +14,7 @@ body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 275vh;
+    height: 240vh;
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -25,42 +25,38 @@ body {
     
 }
 
-#program {
-    color: var(--secondary-color);
-}
 
-
-h1 {
-    text-align: center;
-    margin-top: 350px;
-    color: var(--primary-color);
-    font-size: 3rem;
-}
 
 p {
-    margin: 50px 150px;
+    text-decoration: none;
+    text-align: start;
+    margin-top: 350px;
+    margin-left: 360px;
+ 
 }
 
-h2 {
-    text-align: center;
+p a {
+    text-decoration: none;
     color: var(--primary-color);
-    font-size: 3rem;
+    font-size: 2rem;
+    font-weight: 600;
 }
 
-.event {
-   display: grid;
-   grid-template-columns: repeat(2, 1fr);
-   grid-template-rows: repeat(2, auto);
-   gap: 20px;
-   width: 70%;
-   margin: 0 auto;
-}
+.ungskab {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
 
-.event img {
-    width: 100%;
+}
+.ungskab img {
     height: auto;
-    display: block;
+    width: 50%;
+   
 }
+
+
 
 /*Navbarrens redigering*/
 header .navbar ul {
@@ -143,6 +139,7 @@ header label {
     cursor: pointer;
     display: none;
 }
+
 
 .footer {
     margin-top: 4rem;
