--- a/style.css/ungskab.css
+++ b/style.css/ungskab.css
@@ -14,7 +14,7 @@ body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 240vh;
+    height: 380vh;
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -24,7 +24,6 @@ body {
     margin-left: 35rem;
     
 }
-
 
 
 p {
@@ -56,6 +55,56 @@ p a {
    
 }
 
+.spotify {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   margin-top: 50px;
+   
+}
+
+.spotify iframe {
+    width: 50%;
+    height: 352;
+    border-radius: 12px;
+   
+}
+
+.spotify a{
+    text-decoration: none;
+    color: var(--secondary-color);
+    font-size: 2rem;
+    font-weight: 600;
+    margin-bottom: 50px;
+}
+
+.billet {
+    text-decoration: none;
+    color: var(--primary-color);
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+    background-color: #0040ff;
+    border: 2px solid var(--primary-color);
+    width: 50%;
+    height: auto;
+    margin-left: 360px;
+    
+}
+
+.billet h4{
+    text-decoration: underline;
+}
+
+h5 {
+    text-align: center;
+    margin: 50px 310px;
+    color: var(--secondary-color);
+    font-size: 2rem;
+    font-weight: 600;
+   
+}
 
 
 /*Navbarrens redigering*/
