--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -20,12 +20,20 @@ body {
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+header {
+    position: relative; /* Nødvendig for at 'absolute' elementer kan referere til denne container */
+    height: 100vh; /* Eller en anden højde for header */
+}
+
 .logo {
     position: absolute;
-    width: 350px;
-    margin-left: 35rem;
-    
+    width: 20%;
+    height: auto;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
 }
+
 
 
 h1 {
