--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -34,13 +34,27 @@ header {
     transform: translate(-50%, -50%); 
 }
 
-
+.billede2 {
+    text-align: center;
+    margin-bottom: 2rem;
+}
 
 .billede2 img{
     width: 70%;
     height: auto;
+    
 }
 
+.instagram {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.instagram img{
+    width: 70%;
+    height: auto;
+    
+}
 h1 {
     text-align: center;
     margin-top: 800px;
@@ -58,6 +72,7 @@ h2 {
     text-align: center;
     color: var(--primary-color);
     font-size: 3rem;
+    
 }
 
 /*Navbarrens redigering*/
