--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -45,46 +45,72 @@ header {
     
 }
 
-form.nyhedsbrev {
-    background-color: var(--primary-color);
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px #000000;
-    width: 100%;
- 
-}
+.nyhedsbrev {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100px;
+    margin:150px 300px 150px 300px;
+    border-radius: 15px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: 15px;
+    color: var(--primary-color);
+    margin-bottom: 15px;
+   }
 
-form.nyhedsbrev h2 {
-    text-align: center;
-    font-size: 5rem;
+   .nyhedsbrev h2 {
+    color: var(--primary-color);
+    font-size: 3.5rem;
     margin-bottom: 20px;
+   }
  
-}
 
-form.nyhedsbrev label {
+form.nyhedsbrev input#email, input#fornavn {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 35px;
     font-weight: bold;
+    min-height: 70px;
+    width: 300px;
     text-align: center;
+    font-size: 1.1rem;
+    border-radius: 10px;
+    
 }
 
-form.nyhedsbrev input {
+form.nyhedsbrev input::placeholder, input ::placeholder {
+    color: var(--primary-color);
+    
+}
+
+.nyhedsbrev button {
     display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-}
-
-input#email, input#fornavn {
+    margin-bottom: 35px;
+    font-weight: 800;
+    min-height: 70px;
+    width: 300px;
     text-align: center;
+    font-size: 1.5rem;
+    border-radius: 10px;
+    color: var(--primary-color);
 }
 
+
+.betingelser p {
+    font-size: 1rem;
+    margin-top: -1.4rem;
+}
+input#betingelser {
+    width: 20%;
+}
 .instagram {
     text-align: center;
     margin-bottom: 2rem;
 }
 
 .instagram img{
-    width: 70%;
+    width: 50%;
     height: auto;
     
 }
