--- a/style.css/info.css
+++ b/style.css/info.css
@@ -14,7 +14,7 @@ body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 275vh;
+    height: 475vh;
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -34,9 +34,17 @@ h1 {
 }
 
 p {
-    margin: 50px 150px;
+   text-align: center;
+   margin: 20px 80px;
+   font-size: 1.2rem;
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.drikkevare img {
+    width: 50%;
+    height: auto;
+    display: block;
+}
 h2 {
     text-align: center;
     color: var(--primary-color);
