--- a/style.css/info.css
+++ b/style.css/info.css
@@ -40,7 +40,8 @@ p {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.drikkevare img {
+
+#drikkevare img {
     width: 50%;
     height: auto;
     display: block;
