--- a/style.css/info.css
+++ b/style.css/info.css
@@ -33,6 +33,7 @@ h1 {
     font-size: 3rem;
 }
 
+
 p {
    text-align: center;
    margin: 20px 80px;
@@ -40,12 +41,12 @@ p {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-
-#drikkevare img {
-    width: 50%;
-    height: auto;
-    display: block;
-}
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+} 
 h2 {
     text-align: center;
     color: var(--primary-color);
@@ -69,8 +70,18 @@ h2 {
     
 }
 
+.info img {
+    width: 20%;
+    height: auto;
+   align-items: center;
+}
+
 #ikon4 {
     width: 50%;
+}
+
+#lokationbillede {
+    width: 14%;
 }
 
 /*Navbarrens redigering*/
