--- a/style.css/info.css
+++ b/style.css/info.css
@@ -41,12 +41,7 @@ p {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-} 
+
 h2 {
     text-align: center;
     color: var(--primary-color);
@@ -83,6 +78,15 @@ h2 {
 #lokationbillede {
     width: 14%;
 }
+
+article#person, #ticket, #priser, #lokation, #garderobe, #drikkevare {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
 /*Navbarrens redigering*/
 header .navbar ul {
