google maps link indsat

--- a/style.css/info.css
+++ b/style.css/info.css
@@ -25,6 +25,11 @@ body {
     
 }
 
+.info a {
+    text-decoration: none;
+    color: var(--primary-color);
+    font-weight: 700;
+}
 
 h1 {
     text-align: center;
