--- a/style.css/info.css
+++ b/style.css/info.css
@@ -46,6 +46,10 @@ p {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.info iframe {
+    border-radius: 8px;
+}
+
 
 h2 {
     text-align: center;
