--- a/style.css/info.css
+++ b/style.css/info.css
@@ -14,7 +14,7 @@ body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 675vh;
+    height: 775vh;
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -66,6 +66,8 @@ h2 {
    gap: 55px;
    width: 50%;
    margin: 0 auto;
+   margin-bottom: 100px;
+   border-bottom: 2px solid var(--primary-color);
 }
 
 .ikoner img {
@@ -95,6 +97,7 @@ article#person, #ticket, #priser, #lokation, #garderobe, #drikkevare {
     justify-content: center;
     align-items: center;
     margin: 20px 20px;
+    padding-bottom: 100px;
 }
 
 #barkort {
