--- a/style.css/billet.css
+++ b/style.css/billet.css
@@ -18,6 +18,11 @@ body {
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+#program {
+    color: var(--secondary-color);
+}
+
+
 
 .logo {
     position: absolute;
