--- a/style.css/stot.css
+++ b/style.css/stot.css
@@ -47,7 +47,11 @@ h2 {
     font-size: 3rem;
 }
 
-
+.infographic {
+    position: relative;
+    width: fit-content;
+    display: inline-block;
+}
 
 .circle {
     width: 200px;
@@ -55,9 +59,23 @@ h2 {
     border-radius: 50%;
     background-color: rgb(13, 0, 255);
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     position: relative;
+}
+
+.circle 1{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: rgb(13, 0, 255);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: absolute;
+    align-items: center;
+    margin-top: -450px;
 }
 
 /*Navbarrens redigering*/
