--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -17,6 +17,7 @@ body {
     background-repeat: no-repeat;
     background-color: black;
     height: 100vh;
+    font-size: 2rem;
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -140,18 +141,26 @@ h2 {
         flex-direction: row;
         justify-content: space-around;
         max-width: 100%;
+   
     }
 
+ 
+    header .navbar ul li {
+        position: relative;
+        font-size: 5rem;
+    
+    }
     header .navbar ul li a {
         text-decoration: none;
         display: block;
         color: var(--primary-color);
-        font-size: 10px;
         font-weight: 1000;
       
     }
 }
 
+@media (max-width: 790px) {
+}
 
 /*Navbarrens redigering*/
 header .navbar ul {
