--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -13,7 +13,7 @@
 body {
     background-image: url(../img/landingp.png);
     background-size: cover;
-    background-position: relative;
+    background-position:top;
     background-repeat: no-repeat;
     background-color: black;
     height: 100vh;
@@ -30,7 +30,7 @@ header {
     position: absolute;
     width: 300px;
     height: auto;
-    top: 25%;
+    top: 20%;
     left: 50%;
     transform: translate(-50%, -50%); 
 }
@@ -275,14 +275,14 @@ header label {
 
     .logo {
         position: absolute;
-        width: 200px;
+        width: 180px;
         height: auto;
-        top: 18%;
+        top: 17%;
         left: 50%;
         transform: translate(-50%, -50%); 
     }
 
-}
+    }
 
 @media (max-width: 809px) {
    
@@ -292,25 +292,61 @@ header label {
         justify-content: end;
      
     } 
-   header .navbar {
+
+    header .navbar {
     display: none;
-   }
+    }
    
-   header label {
+    header label {
     display: block;
     position: absolute;
 
-}
+    }
 
     #menu-bar:checked ~ .navbar {
     display: block;
-}
+    }
 
     .menubillede {
     width: 50px;
    
 
-}
+    }
 
-}
+    }
 
+    @media (max-width: 1050px) {
+        header .navbar ul {
+            list-style-type: none;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            max-width: 100%;
+       
+        }
+    
+     
+        header .navbar ul li {
+            position: relative;
+        }
+    
+        header .navbar ul li a {
+            text-decoration: none;
+            display: block;
+            color: var(--primary-color);
+            font-weight: 1000;
+            font-size: 1.7rem;
+          
+        }
+    
+        .logo {
+            position: absolute;
+            width: 180px;
+            height: auto;
+            top: 17%;
+            left: 50%;
+            transform: translate(-50%, -50%); 
+        }
+    
+        }
+    
