--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -313,6 +313,26 @@ header label {
 
     }
 
+    .nyhedsbrev {
+        margin: 10px;
+         }
+                    
+    form.nyhedsbrev input#email, input#fornavn {
+    display: block;
+    margin-bottom: 35px;
+    width: 200px;
+        }
+                
+                   
+
+    input#betingelser {
+    width: 20%;
+    }
+
+    .nyhedsbrev button {
+    margin-bottom: 17px;
+    }
+
     }
 
     @media (max-width: 1050px) {
@@ -347,6 +367,15 @@ header label {
             left: 50%;
             transform: translate(-50%, -50%); 
         }
+
+        h1 {
+            font-size: 3rem;
+            margin-top: 0px;
+        }
+    
+        h2, .nyhedsbrev h2 {
+            font-size: 2rem;
+        }
     
         }
     
@@ -371,6 +400,7 @@ header label {
         font-size: 2rem;
     }
    
+    
     header {
         padding: 20px;
         display: flex;
@@ -450,4 +480,57 @@ header label {
         width: 100%;
         }
                 
-                }
+        
+    }
+
+    @media (max-width: 809px) {
+   
+        header {
+            padding: 20px;
+            display: flex;
+            justify-content: end;
+         
+        } 
+    
+        header .navbar {
+        display: none;
+        }
+       
+        header label {
+        display: block;
+        position: absolute;
+    
+        }
+    
+        #menu-bar:checked ~ .navbar {
+        display: block;
+        }
+    
+        .menubillede {
+        width: 50px;
+       
+    
+        }
+    
+        .nyhedsbrev {
+            margin: 10px;
+             }
+                        
+        form.nyhedsbrev input#email, input#fornavn {
+        display: block;
+        margin-bottom: 35px;
+        width: 200px;
+            }
+                    
+                       
+    
+        input#betingelser {
+        width: 20%;
+        }
+    
+        .nyhedsbrev button {
+        margin-bottom: 17px;
+        }
+    
+        }
+    
