--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -483,37 +483,14 @@ header label {
         
     }
 
-    @media (max-width: 809px) {
+    @media (max-width: 610px) {
    
-        header {
-            padding: 20px;
-            display: flex;
-            justify-content: end;
-         
-        } 
-    
-        header .navbar {
-        display: none;
+      
+        main h1, h2, p{
+            margin: 40px;
         }
-       
-        header label {
-        display: block;
-        position: absolute;
-    
-        }
-    
-        #menu-bar:checked ~ .navbar {
-        display: block;
-        }
-    
-        .menubillede {
-        width: 50px;
-       
-    
-        }
-    
         .nyhedsbrev {
-            margin: 10px;
+            margin: 20px;
              }
                         
         form.nyhedsbrev input#email, input#fornavn {
@@ -525,7 +502,7 @@ header label {
                        
     
         input#betingelser {
-        width: 20%;
+        width:10%;
         }
     
         .nyhedsbrev button {
