--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -419,6 +419,7 @@ header label {
         header label {
         display: block;
         position: absolute;
+        cursor: pointer;
                     
                 
         }
@@ -430,6 +431,37 @@ header label {
         .menubillede {
         width: 50px;
 
+        }
+
+        header .navbar ul {
+            list-style-type: none;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            max-width: 100%;
+            align-items: center;
+        }
+
+        header .navbar ul li {
+            position: relative;
+        }
+
+
+        header .navbar ul li a{
+            text-decoration: none;
+            display: block;
+            text-align: center;
+            width: 100%;
+           
+            
+        }
+    
+        header .navbar ul li a:hover {
+            background: var(--primary-color);
+            color: var(--secondary-color);
+            border-radius: 4px;
+           
+            
         }
                 
         .nyhedsbrev {
