--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -440,26 +440,15 @@ header label {
             justify-content: space-between;
             max-width: 100%;
             align-items: center;
+            background-color: var(--secondary-color);
         }
 
-        header .navbar ul li {
-            position: relative;
-        }
+        
 
-
-        header .navbar ul li a{
-            text-decoration: none;
-            display: block;
-            text-align: center;
-            width: 100%;
-           
-            
-        }
-    
+      
         header .navbar ul li a:hover {
             background: var(--primary-color);
             color: var(--secondary-color);
-            border-radius: 4px;
            
             
         }
