--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -215,9 +215,6 @@ header .navbar ul li:hover > ul {
 }
 
 header label {
-    font-size: 20px;
-    color: #333;
-    cursor: pointer;
     display: none;
 }
 
@@ -288,7 +285,7 @@ header label {
    
     
     header {
-        padding: 20px;
+        padding: 10px 20px 10px 0px;
         display: flex;
         justify-content: end;
         height: 80vh;
@@ -305,15 +302,14 @@ header label {
         header label {
         display: block;
         position: absolute;
-        cursor: pointer;
-        
-                    
+        cursor: pointer;      
                 
         }
                 
         #menu-bar:checked ~ .navbar {
         display: block;
         margin-top: 30px;
+        z-index: 100;
        
         }
                 
@@ -326,45 +322,65 @@ header label {
             list-style-type: none;
             display: flex;
             flex-direction: column;
-            max-width: 100%;
             justify-content: center;
             align-items: center;
             background-color: #0040ff;
+            
            
         }
 
-
+        header .navbar ul li {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
        
+       
+       
+        }
+
+        header .navbar ul li a {
+            font-size: 2rem;
+            font-weight: 600;
+            padding: 21px;
+     
+           
+        }
+
+        header .navbar ul li ul {
+            position: relative;
+            top: 10%;
+            right: 0%;
+            background: var(--secondary-color);
+            display: none;
+            z-index: 100;
+            padding: 0px;
+        
+        }
         
 
-      
         header .navbar ul li a:hover {
             background: var(--primary-color);
             color: var(--secondary-color);
-            
-           
-            
+            text-align: center;
         }
 
-       
-    
-
+        
         header .navbar ul li ul li a{
-            padding: 20px; 
-            font-size: 25px;
+            font-size: 1.4rem;
             font-weight: 600;
             color: var(--secondary-color);
             background-color: var(--primary-color);
-         
-        }
-        
-        header .navbar ul li ul li a:hover {
-            background: var(--primary-color);
-            color: var(--secondary-color);
+            padding: 20px -10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             
           
         }
         
+       
         
         header .navbar ul li:hover > ul {
             display: block; /* Viser submenuen */
@@ -545,3 +561,12 @@ header label {
     
         }
     
+        @media (max-width: 1100px) {
+            
+           
+            h2, .nyhedsbrev h2 {
+                font-size: 2rem;
+            }
+        
+            }
+        
