--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -143,7 +143,6 @@ header .navbar ul {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    overflow: hidden;
     
 }
 
@@ -157,8 +156,7 @@ header .navbar ul li {
 
 header .navbar ul li a {
     text-decoration: none;
-    padding: 40px 10px;
-    margin: 0;
+    padding: 40px;
     display: block;
     color: var(--primary-color);
     font-size: 30px;
@@ -215,6 +213,9 @@ header .navbar ul li:hover > ul {
 }
 
 header label {
+    font-size: 20px;
+    color: #333;
+    cursor: pointer;
     display: none;
 }
 
@@ -250,6 +251,7 @@ header label {
     header .navbar ul {
         list-style-type: none;
         display: flex;
+       
         flex-direction: row;
         justify-content: space-between;
         max-width: 100%;
@@ -267,6 +269,8 @@ header label {
         color: var(--primary-color);
         font-weight: 1000;
         font-size: 1.7rem;
+        white-space: nowrap;
+        
       
     }
 
@@ -416,49 +420,7 @@ header label {
 
     }
 
-    @media (min-width: 908px) {
-        header .navbar ul {
-            list-style-type: none;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            max-width: 100%;
-       
-        }
-    
-     
-        header .navbar ul li {
-            position: relative;
-        }
-    
-        header .navbar ul li a {
-            text-decoration: none;
-            display: block;
-            color: var(--primary-color);
-            font-weight: 1000;
-            font-size: 1.7rem;
-          
-        }
-    
-        .logo {
-            position: absolute;
-            width: 180px;
-            height: auto;
-            top: 15%;
-            left: 50%;
-            transform: translate(-50%, -50%); 
-        }
-
-        h1 {
-            font-size: 3rem;
-            margin-top: 0px;
-        }
-    
-        h2, .nyhedsbrev h2 {
-            font-size: 2rem;
-        }
-    
-        }
+   
     
  @media (max-width: 478px) {
    
@@ -561,12 +523,4 @@ header label {
     
         }
     
-        @media (max-width: 1100px) {
-            
-           
-            h2, .nyhedsbrev h2 {
-                font-size: 2rem;
-            }
-        
-            }
-        
+       
