--- a/style.css/stot.css
+++ b/style.css/stot.css
@@ -49,12 +49,20 @@ h2 {
 
 .infographic {
     position: relative;
-    width: fit-content;
-    display: inline-block;
-    margin-left: 450px;
+    display: flex;
+    justify-content: center;
+    
 }
 
-.circle {
+#circle1, #circle5 {
+    margin-top: -700px;
+}
+
+#circle3 {
+    margin-bottom: -200px;
+}
+
+.cirkler article{
     width: 200px;
     height: 200px;
     border-radius: 50%;
@@ -66,18 +74,11 @@ h2 {
     position: relative;
 }
 
-.circle1{
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background-color: rgb(13, 0, 255);
+section.cirkler {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    position: absolute;
+    justify-content: space-between;
     align-items: center;
-    margin-top: -400px;
-    margin-left: -300px;
 }
 
 /*Navbarrens redigering*/
